--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DATABASE_URL=postgresql://nihmadev:PdRLZGRdUGylo6Q8qCW1B1sbaoXNwqmh@dpg-d4bp826u
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=260775726499-1vknmcof0ejsh92a22i86pvokjp2vcif.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_CALLBACK_URL=https://shakedown.vercel.app/api/auth/google/callback
+GOOGLE_CALLBACK_URL=https://oneshakedown.onrender.com/api/auth/google/callback
 SESSION_SECRET=KOTAKBAS3991
 JWT_SECRET=KOTAKBAS3991-JWT-SECRET-KEY-2024
 
@@ -16,8 +16,8 @@ ADMIN_USERNAME=admin
 # Yandex OAuth Configuration
 YANDEX_CLIENT_ID=6a99906594384864bde2d04cf2855ec2
 YANDEX_CLIENT_SECRET=06941c5ff4ce4618b0e3550cb97455df
-YANDEX_CALLBACK_URL=https://shakedown.vercel.app/api/auth/yandex/callback
+YANDEX_CALLBACK_URL=https://oneshakedown.onrender.com/api/auth/yandex/callback
 # Github OAuth Configuration
 GITHUB_CLIENT_ID=Ov23li4Q91TIdMcANYUR
 GITHUB_CLIENT_SECRET=20ff71c9aa0ba4492e135b3b3233ad7c6dde07e2
-GITHUB_CALLBACK_URL=https://shakedown.vercel.app/api/auth/github/callback
+GITHUB_CALLBACK_URL=https://oneshakedown.onrender.com/api/auth/github/callback
