--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "```\r inside-website/\r ├── index.html          # Главная страница\r ├── auth.html           # Страница входа/регистрации\r ├── dashboard.html      # Личный кабинет\r ├── style.css           # Основные стили\r ├── auth.css            # Стили авторизации\r ├── dashboard.css       # Стили личного кабинета\r ├── script.js           # Основной JavaScript\r ├── auth.js             # JavaScript авторизации\r ├── dashboard.js        # JavaScript личного кабинета\r ├── icon.ico            # ⚠️ ПОМЕСТИТЕ СЮДА ВАШ FAVICON\r └── README.md           # Этот файл\r ```",
   "main": "auth.js",
   "scripts": {
-    "dev": "concurrently \"node server/index.js\" \"vite --config vite.config.ts\"",
+    "dev": "vite --config vite.config.ts",
     "build": "tsc && vite build",
-    "start": "node server/index.js",
+    "start": "vite preview",
     "preview": "vite preview",
-    "server": "node server/index.js",
-    "test:email": "node server/test-email.js",
-    "test:registration": "node server/test-registration.js",
-    "test:code": "node server/test-code-verification.js",
+    "vercel-build": "tsc && vite build",
+    "test:email": "node server/scripts/test-email.js",
+    "test:registration": "node server/scripts/test-registration.js",
+    "test:code": "node server/scripts/test-code-verification.js",
     "create-admin": "node server/scripts/create-admin.js"
   },
   "repository": {
