--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=8080
 FRONTEND_URL=https://shakedown.vercel.app
-VITE_API_URL=
+VITE_API_URL=http://localhost:8080
 DATABASE_URL=postgresql://nihmadev:PdRLZGRdUGylo6Q8qCW1B1sbaoXNwqmh@dpg-d4bp826uk2gs73de38qg-a.oregon-postgres.render.com/looser
 
 # Google OAuth Configuration
