--- a/.env
+++ b/.env
@@ -22,3 +22,9 @@ GITHUB_CLIENT_SECRET=20ff71c9aa0ba4492e135b3b3233ad7c6dde07e2
 GOOGLE_CALLBACK_URL=https://shakedown.vercel.app/api/oauth?provider=google&action=callback
 YANDEX_CALLBACK_URL=https://shakedown.vercel.app/api/oauth?provider=yandex&action=callback
 GITHUB_CALLBACK_URL=https://shakedown.vercel.app/api/oauth?provider=github&action=callback
+# SMTP FOR EMAIL SERVICE
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=h7524714@gmail.com
+SMTP_PASS=oiqpbqfnwuswhdrd
+SMTP_FROM=Shakedown@gmail.com
