--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.18.2",
+    "@vercel/speed-insights": "^1.2.0",
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
