--- a/.env
+++ b/.env
@@ -27,4 +27,4 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=h7524714@gmail.com
 SMTP_PASS=oiqpbqfnwuswhdrd
-SMTP_FROM=Shakedown@gmail.com
+SMTP_FROM=h7524714@gmail.com
