--- a/.env
+++ b/.env
@@ -28,3 +28,5 @@ SMTP_PORT=587
 SMTP_USER=h7524714@gmail.com
 SMTP_PASS=oiqpbqfnwuswhdrd
 SMTP_FROM=SHAKEDOWN <h7524714@gmail.com>
+# Other
+VITE_SNOWFALL=true
