--- a/.env
+++ b/.env
@@ -30,3 +30,6 @@ SMTP_PASS=oiqpbqfnwuswhdrd
 SMTP_FROM=SHAKEDOWN <h7524714@gmail.com>
 # Other
 VITE_SNOWFALL=true
+EXCHANGE_API_KEY=99c7cccc8a4e6c30d7918e45
+REQUST_EXCHANGE=https://v6.exchangerate-api.com/v6/99c7cccc8a4e6c30d7918e45/latest
+VITE_EXCHANGE_API_URL=https://v6.exchangerate-api.com/v6/99c7cccc8a4e6c30d7918e45/latest/RUB
