--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
     { "source": "/api/auth/register", "destination": "/api/auth?action=register" },
     { "source": "/api/auth/resend-code", "destination": "/api/auth?action=resend-code" },
     { "source": "/api/auth/verify-code", "destination": "/api/auth?action=verify-code" },
+    { "source": "/api/users/:id", "destination": "/api/users?id=:id" },
     { "source": "/api/auth/github", "destination": "/api/oauth?provider=github" },
     { "source": "/api/auth/github/callback", "destination": "/api/oauth?provider=github&action=callback" },
     { "source": "/api/auth/google", "destination": "/api/oauth?provider=google" },
